# Drone-case-study

./: .gitignore  404.html  README.md  getting-started.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml
changelog/: index.html
docs/: index.md
examples/: allocation_demo.py  basic_demo.py  clustering_demo.py  demo_ip.py  dubins_demo.py  time_sim_demo.py
examples_obs/: demo_ip.py  dynamic_damage_demo.py  dynamic_new_task_demo.py  run_sim.py  simulation_demo.py  simulation_loop_try.py
getting-started/: index.html
legacy/: legacy_ip.py
other_methods/: aa.py  dubins_paths.py  gba.py  sa.py
paper_results_scripts/: 1_time_cost_functions.py  2_RBDD_vs_GBA.py  3_total_distance_compare.py  4_distance_per_uav_per_example.py  5_computational_time.py  6_first_decision.py  7_full_mission.py  8_new_tasks.py  9_new_task_allocation.py
results/: time_cost_functions.csv  time_cost_functions.json
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: test_assignment.py  test_assignment_greedy.py  test_clustering.py  test_dubins.py  test_dubins_cs.py  test_dubins_csc.py  test_events.py  test_ip_solver.py  test_path_model.py  test_path_planner.py  test_post_processing.py  test_scenario_generation.py  test_simulation_loop.py  test_stepping_fcts.py  test_task_models.py  test_world_models.py
visuals/: animate.py  animation.py  get_trajectory.py  oi_trajectory_plotting.py  oii_plotting.py  oiii_animate.py  oo_plot_scenarios.py  ooo_plot_path_models.py  plot_path_models.py  plotting.py  (+12 more)
(+115 files in other folders)
