[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_uav_planner"
version = "0.1.0"
description = "Dynamic real-time multi-UAV cooperative mission planning under multiple constraints"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Lucian Nita" }
]

dependencies = [
  "numpy",
  "scipy",
  "networkx",
  "matplotlib",
  "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]